@startuml

class Game {
  - bot1: Bots
  - bot2: Bots  
  - bet1: Bet777
  - bet2: Bet777
  - roulette: Ruller
  - flag: int
  - indicator: int
  - ifwin: bool
  - gain: int
  + full_money(): int
  + apply_strategy_to_bot(bot_number: int): int
  + play_round(bot_number: int)
  + check_win(bot_number: int, roulette_result: Tuple)
  + play_game(max_rounds: int)
  + declare_winner()
}

class Bots {
  - diapason: List[int]
  - color_b: str
  - indicator: int
  - ifwin: bool
  - number1_b: int
  - number2_b: int
  + choice(): Tuple[str, List[int]]
  + color_choice(): str
  + get_choice(): List[int]
}

class Bet777 {
  - money: int
  - xbet: int
  + capital(money: int)
  + bet(xbet: int)
  + get_choice(): Tuple[int, int]
}

class Strategies {
  + choose_strategy(curva_bet: int, ifwin: bool, money: int, indicator: int): int
  + dalamber(curva_bet: int, ifwin: bool, money: int): int
  + martingeil(curva_bet: int, ifwin: bool, money: int): int
  + all_capital(curva_bet: int, ifwin: bool, money: int): int
}

class Ruller {
  - numbers: List[int]
  - number_cur: int
  - color_cur: str
  + ruller_spin(): Tuple[int, str]
  + ruller_color(numb: int): str
  + get_result(): Tuple[int, str]
}

Game "1" *-- "2" Bots
Game "1" *-- "2" Bet777  
Game "1" *-- "1" Ruller
Bots ..> Strategies : uses

@enduml
